--- a/UdemySelectorExercise/HtmlPage.html
+++ b/UdemySelectorExercise/HtmlPage.html
@@ -2,10 +2,25 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>My Title</title>
     <script src="JavaScript.js"></script>
 </head>
 <body>
 
+    <!-- Come up with 4 different ways
+        to select the first <p> tag-->
+    <h1>I am an h1!</h1>
+    <p id="first" class="special">Hello</p>
+    <p class="special">Goodbye</p>
+    <p>Hi Again!</p>
+    <p id="last">Goodbye Again</p>
+
+    <!--var tag = document.getElementById("first");
+    document.querySelector("#first");
+    document.getElementsByClassName("special")[0];
+    document.querySelector(".special");
+    document.querySelectorAll(".special")[0];
+    document.getElementsByTagName("p")[0];
+    document.querySelector("h1 + p")-->
 </body>
 </html>
